--- a/codeup/pubspec.yaml
+++ b/codeup/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   flutter_dotenv: ^3.1.0
   dio: ^4.0.6
   flutter_colorpicker: ^1.0.3
+  permission_handler: ^10.0.0
+  image_picker: ^0.8.5+3
+  uuid: ^3.0.6
+  path: ^1.8.1
 
 dev_dependencies:
   flutter_test:
